fixed overflow issue in options panel

--- a/client/src/views/Event/components/OptionsPanel/Options.css
+++ b/client/src/views/Event/components/OptionsPanel/Options.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    z-index: 4;
+    z-index: 6;
     width: 300px;
-    top: 45px;
+    top: 0px;
     left: 0px;
     background: white;
     overflow: hidden;
